// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-13fkobl"
  >
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-13fkobl"
  >
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-13fkobl"
  >
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="css-1ge4v1m"
      href="example-slug"
    >
      <div
        class="css-zfebdm"
      >
        <img
          alt="DSC07717"
          class="css-1qnf57e"
          height="6000"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
